--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,13 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
-apply plugin: 'androidx.navigation.safeargs'
+//apply plugin: 'androidx.navigation.safeargs' // ERROR: Plugin with id: 'androidx.navigation.safeargs' not found - https://stackoverflow.com/a/50288028/1762493
 
 android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.resocoder.timertutorial"
-        minSdkVersion 23
+        minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -23,6 +23,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+    }
 }
 
 dependencies {
@@ -31,6 +41,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha06'
     implementation 'android.arch.navigation:navigation-ui-ktx:1.0.0-alpha06'
+    implementation 'android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha06' // NOTE: https://stackoverflow.com/a/50288028/1762493
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -40,6 +51,7 @@ dependencies {
     implementation 'me.zhanghai.android.materialprogressbar:library:1.4.2'
 //    implementation 'com.android.support:preference-v7:28.1.0'
     implementation 'com.pavelsikun:material-seekbar-preference:2.3.0'
+    annotationProcessor 'com.google.auto.value:auto-value:1.5.2' // NOTE: https://stackoverflow.com/a/46966136/1762493
 //    compile 'com.android.support:appcompat-v7:28.1.1'
 //    compile 'com.android.support:design:28.1.1'
 //    compile 'com.android.support:support-vector-drawable:28.1.1'
