--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
-//apply plugin: 'androidx.navigation.safeargs' // ERROR: Plugin with id: 'androidx.navigation.safeargs' not found - https://stackoverflow.com/a/50288028/1762493
+apply plugin: 'androidx.navigation.safeargs' // ERROR: Plugin with id: 'androidx.navigation.safeargs' not found - https://stackoverflow.com/a/50288028/1762493
 
 android {
     compileSdkVersion 28
@@ -16,7 +16,14 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        // Enabling multidex support - https://stackoverflow.com/a/46494757/1762493
+        multiDexEnabled true
     }
+
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -37,22 +44,28 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha06'
     implementation 'android.arch.navigation:navigation-ui-ktx:1.0.0-alpha06'
-    implementation 'android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha06' // NOTE: https://stackoverflow.com/a/50288028/1762493
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
-    implementation 'me.zhanghai.android.materialprogressbar:library:1.4.2'
+    compile 'me.zhanghai.android.materialprogressbar:library:1.4.2'
 //    implementation 'com.android.support:preference-v7:28.1.0'
-    implementation 'com.pavelsikun:material-seekbar-preference:2.3.0'
+    compile 'com.pavelsikun:material-seekbar-preference:2.3.0'
     annotationProcessor 'com.google.auto.value:auto-value:1.5.2' // NOTE: https://stackoverflow.com/a/46966136/1762493
-//    compile 'com.android.support:appcompat-v7:28.1.1'
-//    compile 'com.android.support:design:28.1.1'
+    implementation 'com.android.support:multidex:1.0.3'
+    compile 'com.android.support:appcompat-v7:28.0.0'
+    compile 'com.android.support:design:28.0.0'
+//    implementation 'com.android.support.constraint.constraint-layout:2.0.0-alpha2'
+//    implementation 'com.android.support.design.widget.AppBarLayout:28.0.0-alpha1'
+//    implementation 'com.android.support.design-floatingactionbutton:28.0.0-alpha1'
+//    implementation 'com.android.support.coordinatorlayout:28.0.0'
+//    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 //    compile 'com.android.support:support-vector-drawable:28.1.1'
 }
